Get rid of optionals in maps